--- a/_posts/2020-04-01-new-site.md
+++ b/_posts/2020-04-01-new-site.md
@@ -18,7 +18,9 @@ First difference: The commands belong to different sets of libraries:
 
 New-SPOSite and New-PnPTenantSite will both create a classic Site Collection that is **not** connected to an Office 365 Group. These will also show up in the classic Site Collection overview in the SharePoint administration center.
 
-New-PnPSite will either create a communication site or an Office 365 Group connected team site. These are often referred to as a "Modern Sites".
+New-PnPSite will either create a communication site or an Office 365 Group connected team site. These are often referred to as "Modern Sites".
+
+
 
 
 
