--- a/_posts/2020-04-01-new-site.md
+++ b/_posts/2020-04-01-new-site.md
@@ -4,7 +4,7 @@ title:  "New-PnPSite, New-PnPTenantSite, New-SPOSite?"
 date:   2020-04-01 07:00:00 +0200
 categories: SharePoint PowerShell PnP
 ---
-This was asked as a question on [SharePoint Stack Exchange](https://sharepoint.stackexchange.com/) but was removed before I had a chance to answer it. This is also why I thought: "Hey, maybe I should create a blog?"
+This was asked as a question on [SharePoint Stack Exchange](https://sharepoint.stackexchange.com/) but was removed before I had a chance to answer it. This is also why I thought: "Hey, maybe I should have a blog?"
 
 The question was along the lines of:
     
