Changed from categories to tags

--- a/_posts/2020-04-01-new-site.md
+++ b/_posts/2020-04-01-new-site.md
@@ -3,7 +3,7 @@ layout: post
 title:  "New-PnPSite, New-PnPTenantSite, New-SPOSite?"
 author: "Rune Sperre"
 date:   2020-04-01 07:00:00 +0200
-categories: PowerShell
+tags: [PnP, PowerShell, SharePoint]
 ---
 This was asked as a question on [SharePoint Stack Exchange](https://sharepoint.stackexchange.com/) but was removed before I had a chance to answer it. This is also why I thought: "Hey, maybe I should have a blog?"
 
