--- a/_posts/2020-04-01-new-site.md
+++ b/_posts/2020-04-01-new-site.md
@@ -21,10 +21,32 @@ New-SPOSite and New-PnPTenantSite will both create a classic Site Collection tha
 
 New-PnPSite will either create a communication site or an Office 365 Group connected team site. These are often referred to as "Modern Sites".
 
+## Why does this matter? 
+Well, to bring it back to the starting question: It depends on what you need.
 
+**Communication Sites and Classic Team Sites**  
+The permissions for these two are handled entierly through the good old SharePoint membership groups. 
 
+**Team Sites**  
+In addition to the standard SharePoint Membership groups, these sites have a corresponding Office 365 Group that handles the permissions. These have Owners and Members. If you look a bit behind the scenes you can see that these are mapped to the SharePoint Groups:
 
+![Hmm](/images/permissions-01.png)
+*This can be a bit confusing. It seems like this site has no owners!*
+
+![Hmm](/images/permissions-02.png)
+*PowerShell to the rescue. We can see that the owners of the Office 365 group are members of this group - note the **_o** at the end of the loginname.*
 
 
   [1]: https://docs.microsoft.com/en-us/powershell/sharepoint/sharepoint-pnp/sharepoint-pnp-cmdlets?view=sharepoint-ps
+  
+
   [2]: https://docs.microsoft.com/en-us/powershell/sharepoint/sharepoint-online/connect-sharepoint-online?view=sharepoint-ps
+
+
+  ## Summary
+
+  If you want the same kind of sites you can get by pressing "New" on SharePoint home, go for New-PnPSite. This lets you create both communication sites and the team sites of 2020.
+
+  If you need a classic site collection, without it being part of an Office 365 Group, use New-PnPTenantSite or New-SPOSite. 
+
+  
