Syntax highlighting, better formatting

--- a/_posts/2020-04-01-new-site.md
+++ b/_posts/2020-04-01-new-site.md
@@ -3,25 +3,31 @@ layout: post
 title:  "New-PnPSite, New-PnPTenantSite, New-SPOSite?"
 author: "Rune Sperre"
 date:   2020-04-01 07:00:00 +0200
+byline: Test test!
 tags: [PnP, PowerShell, SharePoint]
 ---
 This was asked as a question on [SharePoint Stack Exchange](https://sharepoint.stackexchange.com/) but was removed before I had a chance to answer it. This is also why I thought: "Hey, maybe I should have a blog?"
 
 The question was along the lines of:
     
-    Why are there different commands to create new sites in SharePoint?
-    New-PnPSite, New-PnPTenantSite, New-SPOSite? 
+> Why are there different commands to create new sites in SharePoint?  
+> New-PnPSite, New-PnPTenantSite, New-SPOSite... What's the difference?
 
-First difference: The commands belong to different sets of libraries:
+### First difference: The commands belong to different sets of libraries:
 
 `New-PnPSite` and `New-PnPTenantSite` is part of the [Patterns and Practices PowerShell Library][1]  
-`New-SPOSite` belongs to the [SharePoint Online Management Shell][2].
+This is a widely used open source library that mainly uses CSOM to manage SharePoint (supports both Online and On-Premise). 
+
+`New-SPOSite` belongs to the [SharePoint Online Management Shell][2].  
+This is Microsofts management shell, used to manage tenant and site collection level settings. Compared to PnP Powershell it is quite limited in functionality - you also have to connect to the tenant admin center to run the commands.
+
+### There are different types of Site Collections:
 
 New-SPOSite and New-PnPTenantSite will both create a classic Site Collection that is **not** connected to an Office 365 Group. These will also show up in the classic Site Collection overview in the SharePoint administration center.
 
-New-PnPSite will either create a communication site or an Office 365 Group connected team site. These are often referred to as "Modern Sites".
+New-PnPSite will either create a communication site or an Office 365 Group connected team site. These are still often referred to as "Modern Sites".
 
-## Why does this matter? 
+### Why does this matter? 
 Well, to bring it back to the starting question: It depends on what you need.
 
 **Communication Sites and Classic Team Sites**  
@@ -43,10 +49,10 @@ In addition to the standard SharePoint Membership groups, these sites have a cor
   [2]: https://docs.microsoft.com/en-us/powershell/sharepoint/sharepoint-online/connect-sharepoint-online?view=sharepoint-ps
 
 
-  ## Summary
+## Summary
 
-  If you want the same kind of sites you can get by pressing "New" on SharePoint home, go for New-PnPSite. This lets you create both communication sites and the team sites of 2020.
+If you want the same kind of sites you can get by pressing "New" on SharePoint home, go for New-PnPSite. This lets you create both Communication Sites and the Team Sites of 2020.
 
-  If you need a classic site collection, without it being part of an Office 365 Group, use New-PnPTenantSite or New-SPOSite. 
+If you need a classic site collection, without it being part of an Office 365 Group, use New-PnPTenantSite or New-SPOSite.
 
   
